assets/stylesheets/main.css
html, body {
    font-size: 14px;
    font-family: 'Lato', sans-serif;
    font-weight: 400;
    height: 100%;
    margin: 0;
    padding: 0;    
}

body * {
    box-sizing: border-box;
}

a {
    color: #ffffff;
    text-decoration: none;
}

ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

li {
    list-style: none;
    padding: 5px 0; 
    margin: 0;
}

.bold-text {
    font-weight: bold;
}

.flex-space-btw {
    justify-content: space-between !important;
}

.flex-space-around {
    justify-content: space-around !important;
}

.flex-space-even {
    justify-content: space-evenly !important;
}

.app-container {
    display: flex;
    position: relative; 
    height: 100%;       
}

header {
    z-index: 10;
    color: #ffffff;
    font-weight: 700;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0;
    padding: 5px 20px;
    width: 100%;
    min-height: 70px;
    background: linear-gradient(#00796b, #009688);
    box-shadow: 0px 2px 3px 0px rgb(88, 87, 87);
}

header .fa-bars {    
    position: relative;
    color: #ffffff;
    padding: 5px;
    cursor: pointer;
}

header h2 {    
    padding-right: 10px;
    text-shadow: 4px 3px 0 #009688, 2px 5px 0 rgba(0,0,0,0.15);
}

.main {
    display: flex;
    flex-direction: column;
    width: 100%;
}

#map {
    width: 100%;
    height: 100%;
}

/* #### Navigation Styles #### */
#app-nav {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: baseline;
    color: white;
    width: 320px; 
    min-width: 320px;  
    height: 100%;   
    margin: 0;
    padding: 10px 0;   
    overflow: auto;
    background: linear-gradient(#00796b, #009688);
    box-shadow: 2px 0px 3px 0px rgb(88, 87, 87);
    transition: margin 0.5s;
}

#app-nav.hidden {
    margin-left: -320px;
}


#app-nav ul {
    width: 100%;
    padding: 10px 0;
    overflow-y: hidden;    
    overflow-y: auto;
    text-overflow: ellipsis;
}

#app-nav ul li {
    width: 100%;
    padding: 10px 20px;    
    border-bottom: 1px inset #00796b;
    cursor: pointer;
}

#app-nav ul li:hover {
    background-color: #00695c;
}
/* #### end of Navigation Styles #### */

/* #### Filter form Styles #### */
.filter-form {
    display: flex;
    justify-content: flex-start;    
    align-items: center;
    flex-wrap: wrap;
    padding: 5px 20px;
}

.filter-form input[type=text] {
    width: 200px;
    height: 35px;
    display: inline-flex;
    position: relative;
    padding: 0 20px 0 10px;
    margin: auto 0;
    outline: none;
    border: 1px solid lightgray;
    border-radius: 4px;
}

.filter-form .fa {
    width: 40px;
    height: 40px;
    cursor: pointer;
    padding: 15px;
}

.filter-form .fa:hover {
    font-size: 1.75em;
}
/* #### end of Filter form Styles #### */

/* #### fourSquare Info Window Styles #### */
.fs-template {
    display: none;
}

#info-window {
    min-width: 300px;
    min-height: 200px;
    width: 200px;
    height: 200px;
    overflow: auto;
}

.fa-foursquare {
    color: #ffffff;
    background-color: #fc4575;
    border-radius: 4px;
    padding: 10px 13px 6px 13px;    
    margin-right: 10px;
}

.fs-row {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    max-width: 300px;
}

.fs-card {
    border: 1px solid #f3efef;
    border-radius: 10px;
    padding: 10px;
    margin: 20px;
    overflow: scroll;
    box-shadow: 0px 0px 7px 2px #f3efef;
}

#info-window a,
.modal-header a,
.fs-card a {
    color: blue;
    text-decoration: underline;
}

.venue-img {
    width: 150px !important;
    max-width: 150px !important;
    border-radius: 4px;
    box-shadow: 0px 0px 7px 2px #f3efef;
}

.venue-rating {
    color: #ffffff;
    font-weight: bold;
    border-radius: 4px;
    width: 30px;
    height: 30px;
    padding: 5px;
    margin-left: 5px;
}
/* #### end of Info Window Styles #### */


@media screen and (max-width: 460px) and (min-width: 0) {
    #app-nav {
        width: 270px;
        min-width: 270px;
    }

    #app-nav.hidden {
        margin-left: -270px;
    }

    .main header h2 {
        display: none;
    }
}

